Intake page done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   assets:
     - assets/Drawer_images/
     - assets/SuggestedWorkout_images/
+    - assets/intake_images/
   #   - Drawer_images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
