--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_svg: ^2.0.7
   fl_chart: ^0.66.0
+  google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^6.0.4
+  # or latest
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
