--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^5.6.0
   firebase_storage: ^12.4.7
   image_picker: ^1.1.0
+  get: ^4.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
