--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   firebase_storage: ^11.6.8
   image_picker: ^1.1.0
   get: ^4.6.6
-
+  table_calendar: ^3.0.9
   flutter_launcher_icons: ^0.13.1
 
   flutter_screenutil: ^5.8.4
