--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,12 @@ dependencies:
   get: ^4.6.6
   table_calendar: ^3.0.9
   flutter_launcher_icons: ^0.13.1
-
+  http: ^1.2.1
   flutter_screenutil: ^5.8.4
-
+#  google_generative_ai: ^0.4.7
+  chat_gpt_sdk: ^2.2.5
+  dash_chat_2: ^0.0.20
+  google_generative_ai: ^0.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
