--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   chat_gpt_sdk: ^2.2.5
   dash_chat_2: ^0.0.20
   google_generative_ai: ^0.2.2
+  flutter_dotenv: ^5.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
